2008-08-11  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Project/ValaProject.cs, Compiler/ValaCompiler.cs, 
	Project/ProjectPackageCollection.cs, templates/ConsoleValaProject.xpt.xml, 
	templates/EmptyValaProject.xpt.xml, 
	templates/SharedLibraryValaProject.xpt.xml: Add glib-2.0 package
	to new projects by default. Track changes in valac.

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/ProjectPackage.cs, Project/ValaCompilationParameters.cs,
	  Project/ValaProject.cs, Project/ValaProjectConfiguration.cs: Moved
	  serialization engine to MonoDevelop.Core. Use new syntax for
	  specifying attribute scope.

2008-06-26  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Project/ValaProject.cs: Actually turn on debug mode.

2008-06-18  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Project/ProjectPackage.cs: Search more thoroughly for corresponding
	  .pc files.

2008-06-18  Jerome Haltom <wasabi@larvalstage.net>

	* Gui/EditPackagesDialog.cs: Attempt to detect vapidir.

2008-06-12  Lluis Sanchez Gual <lluis@novell.com> 

	* ValaBinding.mdp, Makefile.am: More makefile fixes.

2008-06-12  Lluis Sanchez Gual <lluis@novell.com> 

	* configure.in, Makefile.am: Fix makefile so that it does not directly
	  depend on MD core and it can always be built standalone.
	* ValaBinding.mdp: Enable makefile synchronization.

2008-06-12  Lluis Sanchez Gual <lluis@novell.com> 

	* ValaBinding.mdp: Fix gtk-sharp dependency versions.

2008-06-09  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Project/ValaProject.cs, Navigation/ProjectNodeBuilderExtension.cs: 
	  Add tags from packages to class pad and code completion.

2008-06-09  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/*: Update parse data on file removal.

2008-06-09  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Project/ValaProject.cs: Fix define syntax in generated .pc files.

2008-06-09  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>
