@@ -100,6 +100,7 @@
     <File name="ProjectPad/ProjectPackageNodeBuilder.cs" subtype="Code" buildaction="Compile" />
     <File name="ProjectPad/ProjectPackagesFolderNodeBuilder.cs" subtype="Code" buildaction="Compile" />
     <File name="ProjectPad/ProjectNodeExtension.cs" subtype="Code" buildaction="Compile" />
+    <File name="templates/ValaTestFixture.xpt.xml" subtype="Code" buildaction="EmbedAsResource" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
